created and updated the css style

--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -5,3 +5,7 @@
 @import "nearest.css";
 @import "chef.css";
 @import "products.css";
+@import "testimonials.css";
+@import "gallery.css";
+@import "proff-chefs.css";
+@import "contact.css";
